--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>KEC CUTTOFF CALCULATOR</title>
     <link rel="stylesheet" href="clgg.css">
     
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 <body id="back">
     <div class="container-lg py-3">
