--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <hr>
     
     <footer class="pt-5" >
-     <span >Developed by noob</span> 
+     <span >Developed by TG</span> 
       
     </footer>
 </div>
