--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <table id="pad" class="table table-striped " >
                           <tr>
                              <td >Max Mark 1</td>
-                              <td><input type="text" class="max" min="0" max="100" size="4" required="true">/100</td>
+                              <td><input type="number" class="max" min="0" max="100" size="4" required="true">/100</td>
                           </tr>
                       <tr>
                          <td >Max Mark 2</td>
